# mamy

./: .gitignore  README.md  gradle.properties  local.properties.example  settings.gradle.kts  signing.properties.example
.github/workflows/: release-apk.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/wakeword/: README.md
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_mamy_capturing.xml  ic_mamy_idle.xml  ic_mamy_notif.xml
app/src/main/res/values/: calendar_config.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/xml/: backup_rules.xml
docs/: SMOKE_CHECKLIST.md
docs/brainstorm/: 2026-05-02-design-wip.md
docs/hub/: ORIGINAL_VISION.md  README.md  ROADMAP.md  STATUS.md
docs/hub/briefings/: handoff_mamy_p1_complete_2026-05-03.md  handoff_mamy_p2_complete_2026-05-03.md  handoff_mamy_p6_complete_2026-05-03.md
docs/setup/: oauth-google-cloud.md  release.md
docs/superpowers/plans/: 2026-05-02-mamy-p1-foundation.md  2026-05-02-mamy-p2-voice-capture.md  2026-05-02-mamy-p3-llm-structurer.md  2026-05-02-mamy-p4-voice-intents-memory.md  2026-05-02-mamy-p5-calendar.md  2026-05-02-mamy-p6-briefing.md  2026-05-02-mamy-p7-ui.md  2026-05-02-mamy-p8-privacy-polish.md  CONVENTIONS.md
docs/superpowers/specs/: 2026-05-02-mamy-design.md  2026-05-03-mamy-p9-sms-vocal-design.md
gradle/: libs.versions.toml
keystore/: README.md
ops/i5/: cloudflared-mamy.service  mamy-proxy.service  proxy.py
releases/v0.1.0-alpha/: LISEZ-MOI.txt
(+309 files in other folders)
